# commandeft

./: .pdm-python  .pre-commit-config.yaml  LICENSE  README.md  THIRD-PARTY-LICENSES  THIRD_PARTY_LICENSES  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-feature-report.md
.github/workflows/: python-test.yml
commandeft/: __init__.py  main.py
commandeft/constants/: config_constants.py  consts.py
commandeft/core/: cli.py  decision.py  generation.py  history_cache.py
commandeft/util/: config_util.py  gen_util.py  interactive_util.py  versioning_util.py
tests/core/: test_decision.py  test_generation.py  test_history_cache.py
tests/util/: test_config.py  test_gen.py  test_interactive.py  test_utils.py
