
[project]
name = "commandeft"
version = "0.1.0"
description = "CommanDeft is a CLI tool that converts natural language prompts into executable commands or scripts using OpenAI's chat models."
readme = "README.md"
authors = [
    {name = "Petros Sidirokastritis", email = "sidirope@gmail.com"},
]
requires-python = ">=3.3, <=3.9"
dependencies = [
    "PyInquirer==1.0.3",
    "PyJWT==2.7.0",
    "Pygments==2.15.1",
    "aiohttp==3.8.4",
    "aiosignal==1.3.1",
    "async-timeout==4.0.2",
    "attrs==23.1.0",
    "cachetools==5.3.1",
    "certifi==2023.5.7",
    "cffi==1.15.1",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "cryptography==41.0.1",
    "diskcache==5.6.1",
    "frozenlist==1.3.3",
    "gptcache==0.1.29.1",
    "guidance==0.0.61",
    "idna==3.4",
    "msal==1.22.0",
    "multidict==6.0.4",
    "nest-asyncio==1.5.6",
    "numpy==1.24.3",
    "openai==0.27.7",
    "parsimonious==0.10.0",
    "pip-licenses==4.3.2",
    "platformdirs==3.5.1",
    "prettytable==3.7.0",
    "prompt-toolkit==1.0.14",
    "pycparser==2.21",
    "pygtrie==2.5.0",
    "pyperclip==1.8.2",
    "regex==2023.6.3",
    "requests==2.31.0",
    "six==1.16.0",
    "tiktoken==0.4.0",
    "tqdm==4.65.0",
    "urllib3==2.0.2",
    "wcwidth==0.2.6",
    "yarl==1.9.2",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/Ferrum-Citadel/commandeft"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-pep8",
]

[project.scripts]
commandeft = "commandeft.main:commandeft"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
