
[project]
name = "commandeft"
version = "0.5.0"
description = "CommanDeft is a CLI tool that converts natural language prompts into executable commands or scripts using OpenAI's chat models."
readme = "README.md"
authors = [
    {name = "Petros Sidirokastritis", email = "sidirope@gmail.com"},
]
requires-python = ">=3.8.1, <=3.11.4"
dependencies = [
    "PyJWT==2.7.0",
    "Pygments==2.15.1",
    "aiohttp==3.8.4",
    "aiosignal==1.3.1",
    "async-timeout==4.0.2",
    "attrs==23.1.0",
    "cachetools==5.3.1",
    "certifi==2023.5.7",
    "cffi==1.15.1",
    "charset-normalizer<4.0,>=2.0",
    "click==8.1.3",
    "cryptography==41.0.1",
    "frozenlist==1.3.3",
    "idna==3.4",
    "multidict<7.0,>=4.5",
    "openai>=0.27.8",
    "pip-licenses==4.3.2",
    "prettytable==3.7.0",
    "prompt-toolkit<4.0.0,>=3.0.1",
    "pycparser==2.21",
    "pyperclip==1.8.2",
    "regex==2023.6.3",
    "six==1.16.0",
    "tqdm==4.65.0",
    "urllib3==2.0.2",
    "wcwidth==0.2.6",
    "yarl<2.0,>=1.0",
    "InquirerPy>=0.3.4",
    "tiktoken>=0.4.0",
    "packaging>=23.1",
]
keywords = [
  "commandeft",
  "cli tool",
  "shell commands",
  "prompt-based command generation",
  "natural language prompts",
  "shell commands",
  "shell scripts",
  "shell command generation",
  "intelligent code generation",
  "language-to-code conversion",
  "developer-friendly",
  "simplified scripting",
  "code efficiency",
  "streamline workflow",
  "intelligent suggestions",
  "efficient command composition",
  "gpt-3.5-turbo",
  "gpt-4",
  "shell command suggestion",
  "interactive mode",
  "guided prompt",
  "command execution",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/Ferrum-Citadel/commandeft"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-pep8",
]

[project.scripts]
commandeft = "commandeft.main:commandeft"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
